--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -34,8 +34,20 @@
                 <div class="row">
 
                     <div class="col-1">
-                        <!-- The number of likes goes before the closing strong tag -->
-                        <strong class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }} </strong>
+                        {% if user.is_authenticated %}
+                        <form action="{% url 'post_like' post.slug %}" method="POST">
+                            {% csrf_token %}
+                            {% if liked %}
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><strong><i
+                                        class="fas fa-heart"></i></strong></button>
+                            {% else %}
+                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><strong><i
+                                        class="far fa-heart"></i></strong></button>
+                            {% endif %}
+                        </form>
+                        {% else %}
+                        <strong class="text-secondary"><i class="far fa-heart"></i>
+                            {% endif %} </strong><strong>{{ post.number_of_likes }} </strong>
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
