add back like function in form

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -34,20 +34,21 @@
                 <div class="row">
 
                     <div class="col-1">
-                        {% if user.is_authenticated %}
-                        <form action="{% url 'post_like' post.slug %}" method="POST">
-                            {% csrf_token %}
-                            {% if liked %}
-                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><strong><i
-                                        class="fas fa-heart"></i></strong></button>
+                        <strong>
+                            {% if user.is_authenticated %}
+                            <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+                                {% csrf_token %}
+                                {% if liked %}
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
+                                        class="fas fa-heart"></i></button>
+                                {% else %}
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}"
+                                    class="btn-like"><strong><i class="far fa-heart"></i></button>
+                                {% endif %}
+                            </form>
                             {% else %}
-                            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><strong><i
-                                        class="far fa-heart"></i></strong></button>
-                            {% endif %}
-                        </form>
-                        {% else %}
-                        <strong class="text-secondary"><i class="far fa-heart"></i>
-                            {% endif %} </strong><strong>{{ post.number_of_likes }} </strong>
+                            <span class="text-secondary"><i class="far fa-heart"></i>
+                                {% endif %} {{ post.number_of_likes }} </strong>
                     </div>
                     <div class="col-1">
                         {% with comments.count as total_comments %}
